--- a/package.json
+++ b/package.json
@@ -36,5 +36,5 @@
     "tailwindcss": "^3.4.18",
     "vite": "^4.3.9"
   },
-  "homepage": "https://Hikaru16000all.github.io/Palate-3D-Mapping"
+  "homepage": "https://Hikaru16000all.github.io/4D-Palate-Atlas"
 }
